Monster Drop-down: Set Height

--- a/_sass/theme-nightb1ade.scss
+++ b/_sass/theme-nightb1ade.scss
@@ -64,6 +64,12 @@ td {
 
 /*------------------------------------------------------------------------------------------------*/
 
+.overflow {
+	height: 265px;
+}
+
+/*------------------------------------------------------------------------------------------------*/
+
 section#title {
 	border: 0;
 	outline: none;
