Index: Limit Dropdown Size

--- a/_sass/theme-nightb1ade.scss
+++ b/_sass/theme-nightb1ade.scss
@@ -64,9 +64,7 @@ td {
 
 /*------------------------------------------------------------------------------------------------*/
 
-.overflow {
-	height: 265px;
-}
+.ui-selectmenu-menu .ui-menu {max-height: 265px;}
 
 /*------------------------------------------------------------------------------------------------*/
 
