Monster JSON: Add B: Orcs

--- a/_sass/theme-nightb1ade.scss
+++ b/_sass/theme-nightb1ade.scss
@@ -56,6 +56,10 @@ td {
 	border-bottom: 1px solid #434343;
 }
 
+ul {
+	list-style-type: none;
+}
+
 /*------------------------------------------------------------------------------------------------*/
 
 .hidden {
